website/websites/u32q/code/meteor.3.python3.log

Tue, 27 Jan 2009 04:19:05 GMT

MAKE:
mv meteor.python3-3.python3 meteor.python3-3.py
/usr/local/src/Python-3.0/python -OO -c "from py_compile import compile; compile('meteor.python3-3.py')"
  File "meteor.python3-3.py", line 90
    print board[x + y * w],
              ^
SyntaxError: invalid syntax

0.04s to complete and log all make actions

COMMAND LINE:
/usr/local/src/Python-3.0/python meteor.python3-3.pyo 2098

PROGRAM FAILED 


PROGRAM OUTPUT:

/usr/local/src/Python-3.0/python: can't open file 'meteor.python3-3.pyo': [Errno 2] No such file or directory
